<resources>
    <string name="app_name">WAKE UP</string>
    <string name="press_button_to_connect">press_button_to_connect</string>
    <string name="top">TOP</string>
    <string name="action">etc</string>
    <string name="Values">値をグラフ上に表示</string>
    <string name="title">タイトル</string>
    <string-array name="action_list">
        <item>入眠までの時間</item>
        <item>レム睡眠</item>
        <item>深い眠り</item>
        <item>浅い眠り</item>
        <item>レム睡眠・深い眠り・浅い眠り</item>
        <item>主観評価</item>
    </string-array>

    <!--_____________________________________________________MamePage__________________________________________________-->
    <!--cafein-->
    <string name="cafein_title">就寝前のカフェイン飲料</string>
    <string name="cafein">
        "　カフェインは眠気を防止するわけですから、眠りたいときの眠りも妨げます。問題はカフェインの覚醒効果は８時間～１４時間も持続することです。覚醒効果のピークは飲んでから４０分後ぐらいです。""
         </string>
    <string name="cafein_re">http://blue-light.biz/about_bluelight/?p=14</string>

    <!--bath-->
    <string name="bath_title">就寝前の入浴</string>
    <string name="bath">
        "　夕方あるいは夜の入浴が効果的です。深い睡眠をとるには就寝直前の入浴が良いとされていますが、寝付きを悪くしてしまう心配があります。寝付きを優先させると、就寝の2～3時間前の入浴が理想です。"
         </string>
    <string name="bath_re">http://www.e-healthnet.mhlw.go.jp/information/heart/k-01-004.html</string>

    <!--beer-->
    <string name="beer_title">就寝前の飲酒</string>
    <string name="beer">
        "　お酒を飲んで寝るとしばらくは、アルコールの分解時に発生するアセトアルデヒドの影響で、レム睡眠（体は休んでいても、脳が活発に動いている状態）が抑えられます。しかし、その反動で睡眠の後半にはレム睡眠が増加するため、浅い眠りが続き、中途覚醒を招くというわけです。"
         </string>
    <string name="beer_re">http://www.kaimin-life.jp/column/15.html</string>

    <!--sport-->
    <string name="sport_title">就寝前の運動</string>
    <string name="sport">
        "　効果的なのは夕方から夜（就寝の3時間くらい前）の運動だと言われています。就寝の数時間前に運動によって脳の温度を一過性に上げてやることがポイントです。そうすると床にはいるときの脳温の低下量が運動をしないときに比べて大きくなります。睡眠は脳の温度が低下するときに出現しやすくなるので、結果として快眠が得られやすくなる訳です。ただし就寝直前の運動は体を興奮させてしまうので禁物です。"
         </string>
    <string name="sport_re">http://www.e-healthnet.mhlw.go.jp/information/heart/k-01-004.html</string>

    <!--degital-->
    <string name="degital_title">就寝前のスマホ・TV等の閲覧</string>
    <string name="degital">
        "　夜も明るい環境や、夜遅くまでパソコンなどのLEDディスプレイでブルーライトを浴びる生活は、サーカディアンリズムを乱れさせ、自律神経系や内分泌系、免疫系にも悪影響を及ぼします。寝付きが悪い、眠りが浅いといった「睡眠の質を低下」も、そのひとつです。"
         </string>
    <string name="degital_re">http://blue-light.biz/about_bluelight/?p=14</string>

    <!--light-->
    <string name="light_title">就寝中の明るさ</string>
    <string name="light">
        "　夜、明るい環境にいると、メラトニンの分泌が抑えられてしまいます。夜は暗い環境で過ごすことがよい眠りへつながります。メラトニンとは血圧や脈拍を下げ、睡眠を安定させる作用とサーカディアンリズムを調整する働きがあるホルモン。日中に分泌が抑制され、眠りに就く1～2時間前から増加し、最低体温の1時間後くらいにピークを迎えその後減少します。 "
         </string>
    <string name="light_re">http://nemuri-lab.jp/story/point/659/</string>

    <!--food-->
    <string name="food_title">就寝前の食事</string>
    <string name="food">
        "　胃に食べ物が入ったまま眠ると、睡眠中は脈拍や血圧が下がって、血流が抑制されるので胃腸の動きは鈍くなるため、どうしても消化や吸収の効率が下がります。  すると、消化不良を起こして下痢や便秘になりやすいほか、「逆流性食道炎」の原因にもなります。"
         </string>
    <string name="food_re">http://www.human-sb.com/mechanism/sleep-and-meal.html</string>

    <!--smoke-->
    <string name="smoke_title">就寝前の喫煙</string>
    <string name="smoke">
        "　タバコを吸えば血管の収縮がおき、血圧が上昇、鼓動が早くなり、身体は飛び起きます。血圧と心拍数が上昇するということは、身体が激しい運動をした状態と同じになっていることを意味します。""
         </string>
    <string name="smoke_re">http://www.no-tabaco.com/effect/sleep.html</string>


    <!--_____________________________________________________End_MamePage______________________________________________-->
    <!--_____________________________________________________HelpPage__________________________________________________-->
    <!--リズム-->
    <string name="rhythm_title">睡眠のリズムについて</string>
    <string name="rhythm">
        "　睡眠のはじめは、レム睡眠の過程を通り、一晩の眠りで最も深いノンレム睡眠になります。その後またレム睡眠に切り替わります。このようなノンレム睡眠とレム睡眠の１セットでおよそ90分になります。この90分の1セットのリズムでレム睡眠と、ノンレム睡眠が繰り返されます。そして、90分のうち、成人では、およそ、全体の睡眠時間の20～25％がレム睡眠です。残りがノンレム睡眠ということになります。脳の休息に当てられるが75％～80％、活動に充てられるのが20％～25％ということになります。"
        </string>
    <string name="re_rhythm">http://nandemo.ciao.jp/nemunemu-nandemo/suimin/</string>

    <!--レム-->
    <string name="rem_title">レム睡眠について</string>
    <string name="rem">
        "　入眠してから徐々に睡眠が深くなっていくと現れるのがレム睡眠です。この睡眠の特徴は急速な眼球運動が見られ、このような睡眠期には夢を見ていることが多く、急速眼球運動（rapid eye movement， REM）の頭文字を取ってレム睡眠と呼ばれます。睡眠の中では浅い眠りで、身体の睡眠、記憶の整理が行われているといわれています。"
    </string>
    <string name="rem_ref">http://www.health-net.or.jp/tairyoku_up/chishiki/sleep/t03_10_07_01.html</string>

    <!--ノンレム-->
    <string name="non_rem_title">ノンレム睡眠について</string>
    <string name="non_rem">
        "　ノンレム睡眠(Non REM)とは、レム睡眠以外の深い睡眠の事です。眼球運動がなく、身体の筋肉を保たれますが脳の活動は低下するので大脳の睡眠といわれ、成長ホルモンの分泌や免疫機能の増加はこの睡眠中に行われるとされています。ノンレム睡眠は深さに応じて4つの段階に分けられています"
    </string>
    <string name="re_non_rem">https://ja.wikipedia.org/wiki/%E3%83%AC%E3%83%A0%E7%9D%A1%E7%9C%A0</string>

    <string name="up_title">UP3について</string>
    <string name="up">
        "　UP3は睡眠のデータをレム睡眠、浅い眠り(ノンレム1,2段階)、深い眠り(ノンレム3,4段階)で睡眠のデータを計測しています。そのため、本アプリの図の要素選択ではこの３つの段階から選択することができます。"
    </string>
    <string name="re_up">https://jawbone.com/store/buy/up3</string>

    <string name="graph_title">散布図について</string>

    <!-- 入眠 -->
    <string name="onseticon">
         入眠までの時間
    </string>
    <string name="onset">
         UP3で計測される入眠までの時間と活動量を比較します。寝床に着いてからレム睡眠に入るまでをUP3が判断し、計測しています。
    </string>
    <string name="onset_model">
        "　入眠までの時間と活動量を比較したモデルケースです。2000kal活動した日は入眠までの時間が短いケースが多く分布しています。1000kal以下は入眠に時間がかかっているケースが多く分布しています。このケースではあまり活動していない日は入眠に時間がかかってしまうようです。"
    </string>

    <!-- レム -->
    <string name="remgicon">
         レム睡眠
    </string>
    <string name="remg">
        "　UP3で計測されるレム睡眠のデータと活動量を比較します"
    </string>
    <string name="remg_model">
        "　浅い眠りと活動量を比較したモデルケースです。このケースでは、睡眠の大半をノンレム1,2段階の眠りが占めているようです。ところで、就寝前にお酒を飲んだり、入浴したりした日はこの割合は変化しているのでしょうか。行動チェックの散布図と見比べてみましょう。浅い眠りと活動量を比較したモデルケースです。このケースでは、睡眠の大半をノンレム1,2段階の眠りが占めているようです。ところで、就寝前にお酒を飲んだり、入浴したりした日はこの割合は変化しているのでしょうか。行動チェックの散布図と見比べてみましょう。"
    </string>

    <!-- 評価-->
        <string name="value_icon">
            "評価"
        </string>
        <string name="value">
            "　日々入力してきた睡眠に対する評価と活動量を比較します"
        </string>
        <string name="value_model">
            "　睡眠に対する評価と活動量を比較したケースです。2000kal付近までは高評価が多く分布しています。しかし、3000kal付近に近づくにつれ評価が低くなっています。このケースでは約2000kalまで活動した日はよく眠れたと感じており、3000kalに近づくにつれよく眠れなかったと感じているようです。UP3で計測したデータと活動量を比較した散布図との違いはありますでしょうか？自分は良く眠れたと思っていた日でも、データでは深く眠れていなかったり、入眠までに時間がかかっていたりするかもしれません。"
        </string>

    <!-- 行動メモ-->
    <string name="act_check_title">行動メモ</string>
        <string name="act_check">
            "　行動メモに設定されている項目は睡眠に何らかの影響を及ぼす可能性があるものとなっています。項目に該当する行動を行った日のデータは、項目ごとに別の散布図として表示することができ、それぞれの行動の影響を知ることができます。各項目について詳しくは豆知識で解説しています。"
        </string>
    <!--mamelink-->
    <string name="mame_link">豆知識へ</string>
    <!--_____________________________________________________End_HelpPage__________________________________________________-->
</resources>
